Binary search for ints and strings